--- a/src/app/components/invoices/invoices.component.html
+++ b/src/app/components/invoices/invoices.component.html
@@ -19,34 +19,58 @@
         />
 
       <mat-divider></mat-divider>
+        <div class="w-full grid grid-row mt-4 justify-end items-end">
+          <button 
+            class="w-[15vw] bg-sky-900 text-white px-4 py-2 rounded mb-4 disabled:opacity-50" 
+            [disabled]="selectedInvoices().length === 0" 
+            (click)="downloadSelectedPDFs()"
+            >
+            Descargar seleccionadas
+          </button>
+        </div>
+
       <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
       <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
         <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
         <tr class="bg-gray-200 text-center">
+          <th class="px-4 py-2 "><input id="vue-checkbox" type="checkbox" value="" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-sm focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-700 dark:focus:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500"></th>
           <th class="px-4 py-2 ">Número Factura</th>
           <th class="px-4 py-2 ">Nombre Cliente</th>
           <th class="px-4 py-2 ">Total Factura</th>
           <th class="px-4 py-2 ">Forma Pago</th>
           <th class="px-4 py-2 ">Fecha Factura</th>
-          <th class="px-4 py-2 "></th>
+          <th class="px-4 py-2 ">
+          </th>
         </tr>
       </thead>
       <tbody>
         @for (invoice of filteredInvoices(); track $index) {
         <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 text-center">
+          <td class="px-4 py-2">
+            <input
+              type="checkbox"
+              [checked]="isSelected(invoice)"
+              (change)="toggleSelection(invoice)"
+              [value]="invoice.idFactura"
+              class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-sm"
+            />
+          </td>
           <td class="px-4 py-2 text-black">{{ invoice.numeroFactura }}</td>
           <td class="px-4 py-2 font-bold text-black">{{ invoice.nombreCliente }}</td>
           <td class="px-4 py-2 text-black font-bold">$ {{ invoice.parsedFactura?.Total | number: '1.0-0' }}</td>
           <td class="px-4 py-2 text-black">{{ invoice.formaPago }}</td>
           <td class="px-4 py-2 text-black">{{ invoice.fechaCreacion | date: 'dd-MM-yyyy' }}</td>
           <th class="px-4 py-2 items-center">
-            <!-- <button 
-                class="w-10 h-10 bg-green-500 text-white rounded hover:bg-green-600 transition duration-200"
-                (click)="downloadPDF(invoice)"
-              >
-              <mat-icon class="text-white text-lg">download</mat-icon>
-              </button> -->
-              <p class="text-blue-600 font-light hover:cursor-pointer" (click)="downloadPDF(invoice)">Descargar</p>
+            <p
+              class="text-blue-600 font-medium"
+              [class.cursor-not-allowed]="selectedInvoices().length > 0"
+              [class.text-gray-400]="selectedInvoices().length > 0"
+              [class.text-blue-600]="selectedInvoices().length === 0"
+              [class.hover:cursor-pointer]="selectedInvoices().length === 0"
+              (click)="selectedInvoices().length === 0 && downloadPDF(invoice)"
+            >
+              Descargar
+            </p>
           </th>
         </tr>
         }
